--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
@@ -87,6 +87,8 @@ body {
 
 .modal-inner {
   background-color: blueviolet;
+  font-family: monospace;
+  text-align: center;
   color: white;
   padding: 20px;
   font-size: 20px;
@@ -152,4 +154,15 @@ body {
 .fox-dead {
   top: 380px;
   left: 243px;
+}
+
+.navbar {
+  background-color: transparent;
+  color: whitesmoke;
+  font-size: 30px;
+  font-family: monospace;
+  text-align: center;
+  padding-bottom: 5px;
+  padding-top: 10px;
+  margin-bottom: 10px;
 }
